--- a/css/styles.css
+++ b/css/styles.css
@@ -1,128 +1,184 @@
+:root {
+  --brand-color: #2196f3;
+  --background-color: #2f303a;
+  --background-text-color: #757575;
+  --color-nav: #000000;
+  --off-text-decoration: none;
+  --off-list-style-type: none;
+  --white-text-color: #ffffff;
+}
 body {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif, serif;
   font-style: normal;
+  color: var(--background-text-color);
 }
 .logo {
   font-family: 'Raleway';
   font-style: normal;
-  font-weight: 700;
   font-size: 26px;
   line-height: 31px;
-  /* identical to box height */
-
+  font-size: 26px;
   letter-spacing: 0.03em;
-  color: #2196f3;
+  color: var(--brand-color);
 }
 .logo > span {
   color: #000000;
 }
 .main-navigation {
-  font-family: 'Roboto';
+  color: var(--color-nav);
+}
+.page-header {
   font-size: 14px;
   font-weight: 500;
   line-height: 16px;
   letter-spacing: 0.02em;
   text-align: left;
-  list-style-type: none;
-  color: #000000;
 }
 .page-header ul {
-  list-style-type: none;
+  list-style-type: var(--off-list-style-type);
 }
 .page-header a {
-  text-decoration: none;
+  text-decoration: var(--of-text-decoration);
 }
 .main-navigation a:active {
-  text-decoration: none;
-  color: #2196f3;
+  text-decoration: var(--of-text-decoration);
+  color: var(--brand-color);
 }
 .main-navigation a:visited {
-  text-decoration: none;
-  color: #000000;
+  text-decoration: var(--of-text-decoration);
+  color: var(--color-nav);
 }
 .main-navigation a:focus {
-  text-decoration: none;
-  color: #2196f3;
+  text-decoration: var(--of-text-decoration);
+  color: var(--brand-color);
 }
 .main-navigation a:hover {
-  text-decoration: none;
-  color: #2196f3;
+  text-decoration: var(--of-text-decoration);
+  color: var(--brand-color);
 }
 .main-info {
-  font-family: Roboto;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 16px;
-  letter-spacing: 0.02em;
-  text-align: left;
-  color: #757575;
+  color: var(--background-text-color);
 }
 .main-info a:link {
-  text-decoration: none;
-  color: #757575;
+  text-decoration: var(--of-text-decoration);
+  color: var(--background-text-color);
 }
 .main-info a:active {
-  text-decoration: none;
-  color: #2196f3;
+  text-decoration: var(--of-text-decoration);
+  color: var(--brand-color);
 }
 .main-info a:visited {
-  text-decoration: none;
-  color: #000000;
+  text-decoration: var(--of-text-decoration);
+  color: var(--color-nav);
 }
 .main-info a:focus {
-  text-decoration: none;
-  color: #2196f3;
+  text-decoration: var(--of-text-decoration);
+  color: var(--brand-color);
 }
 .main-info a:hover {
-  text-decoration: none;
-  color: #2196f3;
+  text-decoration: var(--of-text-decoration);
+  color: var(--brand-color);
 }
 .page-main {
-  background: #2f303a;
+  background: var(--background-color);
+}
+.filling h3 {
+  color: var(--color-nav);
+}
+.filling h2 {
+  color: var(--color-nav);
 }
 .page-middle ul {
-  list-style-type: none;
+  list-style-type: var(--off-list-style-type);
 }
 .page-main_main-text {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--white-text-color);
 }
 .page-main_main-text_button {
-  background: #2196f3;
+  background: var(--brand-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  border-color: #2196f3;
-  color: #ffffff;
+  border-color: var(--brand-color);
+  color: var(--white-text-color);
   cursor: pointer;
 }
-.page-middle p {
-  color: #757575;
+.page-portfolio_main-text_button {
+  border: 0;
+  border-radius: 0;
+  background: var(--white-text-color);
+  color: var(--color-nav);
+  border-color: var(--white-text-color);
+  appearance: none;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+.page-portfolio_main-text_button:focus {
+  background-color: var(--brand-color);
+  color: var(--white-text-color);
+  border-radius: 4px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .gallery ul {
-  list-style-type: none;
+  list-style-type: var(--off-list-style-type);
 }
 .team ul {
-  list-style-type: none;
+  list-style-type: var(--off-list-style-type);
 }
 .team h3 {
   text-align: center;
 }
 .team p {
   text-align: center;
-  color: #757575;
 }
 .page-footer ul {
-  list-style-type: none;
+  list-style-type: var(--off-list-style-type);
 }
 .page-footer a {
-  text-decoration: none;
+  text-decoration: var(--of-text-decoration);
 }
 .page-footer address {
-  text-decoration: none;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 24px;
 }
 .page-footer {
-  font-family: 'Roboto';
+  background-color: var(--background-color);
+}
+.page-footer p {
+  color: var(--white-text-color);
+}
+.white-logo {
+  color: var(--white-text-color);
+  font-family: 'Raleway';
   font-style: normal;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 31px;
+}
+.info-footer a:link {
+  text-decoration: var(--of-text-decoration);
+  color: var(--background-text-color);
+}
+.info-footer a:active {
+  text-decoration: var(--of-text-decoration);
+  color: var(--background-text-color);
+}
+.info-footer a:visited {
+  text-decoration: var(--of-text-decoration);
+  color: var(--color-nav);
+}
+.info-footer a:focus {
+  text-decoration: var(--of-text-decoration);
+  color: var(--brand-color);
+}
+.info-footer a:hover {
+  text-decoration: var(--of-text-decoration);
+  color: var(--brand-color);
 }
