--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 body {
   font-family: 'Roboto', sans-serif, serif;
   font-style: normal;
-  color: var(--background-text-color);
+  color: var(--color-nav);
 }
 .logo {
   font-family: 'Raleway';
@@ -19,10 +19,10 @@ body {
   line-height: 31px;
   font-size: 26px;
   letter-spacing: 0.03em;
-  color: var(--brand-color);
+  color: var(--color-nav);
 }
 .logo > span {
-  color: #000000;
+  color: var(--brand-color);
 }
 .main-navigation {
   color: var(--color-nav);
@@ -82,12 +82,6 @@ body {
 .page-main {
   background: var(--background-color);
 }
-.filling h3 {
-  color: var(--color-nav);
-}
-.filling h2 {
-  color: var(--color-nav);
-}
 .page-middle ul {
   list-style-type: var(--off-list-style-type);
 }
@@ -125,6 +119,9 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.page-middle p {
+  color: var(--background-text-color);
+}
 .gallery ul {
   list-style-type: var(--off-list-style-type);
 }
@@ -136,6 +133,7 @@ body {
 }
 .team p {
   text-align: center;
+  color: var(--background-text-color);
 }
 .page-footer ul {
   list-style-type: var(--off-list-style-type);
@@ -180,5 +178,17 @@ body {
 }
 .info-footer a:hover {
   text-decoration: var(--of-text-decoration);
+  color: var(--brand-color);
+}
+.logo-footer {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-size: 26px;
+  line-height: 31px;
+  font-size: 26px;
+  letter-spacing: 0.03em;
+  color: var(--white-text-color);
+}
+.logo-footer > span {
   color: var(--brand-color);
 }
