--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,13 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.page-portfolio_main-text_button:hover {
+  background-color: var(--brand-color);
+  color: var(--white-text-color);
+  border-radius: 4px;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 .page-middle p {
   color: var(--background-text-color);
 }
