--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,9 @@ body {
   text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 60px;
   color: var(--white-text-color);
 }
 .page-main_main-text_button {
@@ -127,7 +130,18 @@ body {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .page-middle p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
   color: var(--background-text-color);
+}
+.page-middle h3 {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 .gallery ul {
   list-style-type: var(--off-list-style-type);
@@ -135,11 +149,24 @@ body {
 .team ul {
   list-style-type: var(--off-list-style-type);
 }
+.team li {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 .team h3 {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
   text-align: center;
+  letter-spacing: 0.03em;
 }
 .team p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
   text-align: center;
+  letter-spacing: 0.03em;
   color: var(--background-text-color);
 }
 .page-footer ul {
