--- a/css/styles.css
+++ b/css/styles.css
@@ -6,18 +6,19 @@
   --off-text-decoration: none;
   --off-list-style-type: none;
   --white-text-color: #ffffff;
+  --product-text-color: #212121;
 }
 body {
   font-family: 'Roboto', sans-serif, serif;
-  font-style: normal;
   color: var(--color-nav);
+}
+.logo a {
+  font-style: normal;
 }
 .logo {
   font-family: 'Raleway';
-  font-style: normal;
   font-size: 26px;
-  line-height: 31px;
-  font-size: 26px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--color-nav);
 }
@@ -30,7 +31,7 @@ body {
 .page-header {
   font-size: 14px;
   font-weight: 500;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   text-align: left;
 }
@@ -43,16 +44,15 @@ body {
 .filling h2 {
   font-weight: 700;
   font-size: 36px;
-  line-height: 42px;
+  line-height: 1.16;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
 }
-.main-navigation a:link {
-  text-decoration: var(--of-text-decoration);
+.studio a:active {
   color: var(--brand-color);
 }
-.main-navigation a:active {
+.main-navigation a:link {
   text-decoration: var(--of-text-decoration);
   color: var(--brand-color);
 }
@@ -103,7 +103,7 @@ body {
   text-transform: uppercase;
   font-weight: 900;
   font-size: 44px;
-  line-height: 60px;
+  line-height: 1.36;
   color: var(--white-text-color);
 }
 .page-main_main-text_button {
@@ -113,6 +113,8 @@ body {
   border-color: var(--brand-color);
   color: var(--white-text-color);
   cursor: pointer;
+  font-family: inherit;
+  letter-spacing: 0.06em;
 }
 .page-portfolio_main-text_button {
   border: 0;
@@ -120,12 +122,14 @@ body {
   background: var(--white-text-color);
   color: var(--color-nav);
   border-color: var(--white-text-color);
-  appearance: none;
-  cursor: pointer;
   font-size: 16px;
-  line-height: 26px;
+  line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+  font-family: inherit;
+  appearance: none;
+  cursor: pointer;
+  text-align: center;
 }
 .page-portfolio_main-text_button:focus {
   background-color: var(--brand-color);
@@ -141,17 +145,25 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
+.products h3 {
+  font-size: 18px;
+  line-height: 2;
+  color: var(--product-text-color);
+}
+.products p {
+  font-size: 16px;
+  line-height: 1.88;
+}
 .page-middle p {
-  font-weight: 400;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
-  color: #212121;
+  color: var(--background-text-color);
 }
 .page-middle h3 {
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #212121;
@@ -170,14 +182,12 @@ body {
 .team h3 {
   font-weight: 500;
   font-size: 16px;
-  line-height: 19px;
+  line-height: 1.18px;
   text-align: center;
   letter-spacing: 0.03em;
 }
 .team p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 19px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--background-text-color);
@@ -191,7 +201,7 @@ body {
 .page-footer address {
   font-style: normal;
   font-size: 14px;
-  line-height: 24px;
+  line-height: 1.71;
 }
 .page-footer {
   background-color: var(--background-color);
@@ -205,7 +215,7 @@ body {
   font-style: normal;
   font-weight: 700;
   font-size: 26px;
-  line-height: 31px;
+  line-height: 1.19px;
 }
 .info-footer a:link {
   text-decoration: var(--of-text-decoration);
@@ -213,7 +223,7 @@ body {
 }
 .info-footer a:active {
   text-decoration: var(--of-text-decoration);
-  color: var(--background-text-color);
+  color: rgba(255, 255, 255, 0.6);
 }
 .info-footer a:visited {
   text-decoration: var(--of-text-decoration);
@@ -229,10 +239,8 @@ body {
 }
 .logo-footer {
   font-family: 'Raleway';
-  font-style: normal;
   font-size: 26px;
-  line-height: 31px;
-  font-size: 26px;
+  line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--white-text-color);
 }
