--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,8 @@ body {
   color: var(--white-text-color);
   cursor: pointer;
   font-family: inherit;
+  font-size: 16px;
+  line-height: 1.88;
   letter-spacing: 0.06em;
 }
 .page-portfolio_main-text_button {
